[1] - Gestione migliorata del layout [2] - FIX della larghezza minima della bubbe (spaccava tutto su 360px) [3] - Wrap dei testi senza spazi e troppo lunghi

--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -41,7 +41,7 @@
 
     .msg-box {
         max-width: 737px;
-        min-width: 350px;
+        min-width: 245px;
 
         &.left {
             margin-left: 20px;
@@ -136,3 +136,7 @@
     -webkit-box-orient: vertical;
      overflow: hidden;
 }
+
+.wrap { 
+    word-break: break-all;
+ }
